--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -2,6 +2,12 @@
 #tap "homebrew/cask"
 #tap "homebrew/core"
 # Clone of cat(1) with syntax highlighting and Git integration
+tap "kcl-lang/tap"
+brew "kuttl-cli"
+tap "kudobuilder/tap"
+brew "kcl-lang/tap/kcl"
+
+brew "oven-sh/bun/bun"
 brew "just"
 brew "bat"
 brew "kustomize"
@@ -14,7 +20,6 @@ brew "kubeseal"
 brew "k9s"
 brew "kind"
 brew "argocd"
-# brew "kuttl-cli"
 brew "node"
 brew "pnpm"
 brew "awscli"
@@ -32,6 +37,7 @@ brew "tilt"
 #brew "git"
 # UNIX shell (command interpreter)
 #brew "zsh"
+cask "arc"
 cask "raycast"
 # cask "google-chrome"
 cask "visual-studio-code"
