--- a/.config/brew/Brewfile
+++ b/.config/brew/Brewfile
@@ -9,7 +9,9 @@ brew "kcl-lang/tap/kcl"
 
 brew "oven-sh/bun/bun"
 brew "just"
+brew "fzf"
 brew "bat"
+brew "go-task"
 brew "kustomize"
 brew "stow"
 brew "starship"
@@ -31,6 +33,7 @@ brew "pulumi"
 # cask "docker"
 brew "nerdctl"
 brew "tilt"
+# brew "gittyup"
 # Modern replacement for 'ls'
 #brew "exa"
 # Distributed revision control system
@@ -42,3 +45,6 @@ cask "raycast"
 # cask "google-chrome"
 cask "visual-studio-code"
 cask "warp"
+cask "gitkraken"
+cask "ghostty"
+cask "sourcetree"
