--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,6 +1,3 @@
-#tap "homebrew/bundle"
-#tap "homebrew/cask"
-#tap "homebrew/core"
 # Clone of cat(1) with syntax highlighting and Git integration
 tap "kcl-lang/tap"
 brew "kuttl-cli"
@@ -9,6 +6,7 @@ brew "kcl-lang/tap/kcl"
 
 brew "oven-sh/bun/bun"
 brew "just"
+brew "nushell"
 brew "fzf"
 brew "bat"
 brew "go-task"
@@ -31,7 +29,7 @@ brew "minikube"
 brew "kubectx"
 brew "pulumi"
 # cask "docker"
-brew "nerdctl"
+# brew "nerdctl"
 brew "tilt"
 # brew "gittyup"
 # Modern replacement for 'ls'
@@ -47,4 +45,5 @@ cask "visual-studio-code"
 cask "warp"
 cask "gitkraken"
 cask "ghostty"
-cask "sourcetree"
+cask "discord"
+cask "mongodb-compass"
