--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -4,6 +4,7 @@ brew "kuttl-cli"
 tap "kudobuilder/tap"
 brew "kcl-lang/tap/kcl"
 
+brew "stefanprodan/tap/timoni"
 brew "oven-sh/bun/bun"
 brew "just"
 brew "nushell"
@@ -14,33 +15,25 @@ brew "kustomize"
 brew "stow"
 brew "starship"
 brew "vcluster"
-# brew "k3d"
 brew "kubevela"
 brew "kubeseal"
 brew "k9s"
 brew "kind"
+brew "gh"
+brew "lazygit"
 brew "argocd"
 brew "node"
 brew "pnpm"
 brew "awscli"
 brew "helm"
-# brew "kcl"
 brew "minikube"
 brew "kubectx"
 brew "pulumi"
-# cask "docker"
-# brew "nerdctl"
 brew "tilt"
-# brew "gittyup"
-# Modern replacement for 'ls'
-#brew "exa"
-# Distributed revision control system
-#brew "git"
-# UNIX shell (command interpreter)
-#brew "zsh"
+brew "zoxide"
+brew "eza"
 cask "arc"
 cask "raycast"
-# cask "google-chrome"
 cask "visual-studio-code"
 cask "warp"
 cask "gitkraken"
