--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,7 +6,9 @@ brew "kcl-lang/tap/kcl"
 
 brew "stefanprodan/tap/timoni"
 brew "oven-sh/bun/bun"
+brew "buf"
 brew "just"
+brew "bacon"
 brew "nushell"
 brew "fzf"
 brew "bat"
