--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -8,6 +8,8 @@ brew "stefanprodan/tap/timoni"
 brew "oven-sh/bun/bun"
 brew "buf"
 brew "just"
+brew "testkube"
+brew "kubescape"
 brew "bacon"
 brew "nushell"
 brew "fzf"
