--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,6 +9,12 @@ brew "oven-sh/bun/bun"
 brew "buf"
 brew "just"
 brew "testkube"
+brew "popeye"
+brew "kubent"
+brew "argo"
+brew "flux"
+# brew "argo-cd"
+brew "linkerd"
 brew "kubescape"
 brew "bacon"
 brew "nushell"
