--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -12,6 +12,7 @@ brew "testkube"
 brew "popeye"
 brew "kubent"
 brew "crossplane"
+brew "kuttl-cli"
 brew "argo"
 brew "flux"
 # brew "argo-cd"
@@ -33,6 +34,7 @@ brew "kind"
 brew "gh"
 brew "lazygit"
 brew "argocd"
+brew "zig"
 brew "node"
 brew "pnpm"
 brew "awscli"
@@ -52,3 +54,6 @@ cask "ghostty"
 cask "discord"
 cask "google-cloud-sdk"
 cask "mongodb-compass"
+cask "microsoft-teams"
+cask "zoom"
+# cask "jetbrains-toolbox"
