--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,8 +1,10 @@
 # Clone of cat(1) with syntax highlighting and Git integration
 tap "kcl-lang/tap"
-brew "kuttl-cli"
-tap "kudobuilder/tap"
 brew "kcl-lang/tap/kcl"
+tap "KusionStack/tap"
+brew "KusionStack/tap/kusion"
+# brew "kuttl-cli"
+# tap "kudobuilder/tap"
 
 brew "stefanprodan/tap/timoni"
 brew "oven-sh/bun/bun"
@@ -16,6 +18,7 @@ brew "kuttl-cli"
 brew "argo"
 brew "flux"
 # brew "argo-cd"
+brew "vals"
 brew "linkerd"
 brew "kubescape"
 brew "bacon"
@@ -39,6 +42,7 @@ brew "node"
 brew "pnpm"
 brew "awscli"
 brew "helm"
+brew "helmfile"
 brew "minikube"
 brew "kubectx"
 brew "pulumi"
