--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,9 +3,10 @@ tap "kcl-lang/tap"
 brew "kcl-lang/tap/kcl"
 tap "KusionStack/tap"
 brew "KusionStack/tap/kusion"
-# brew "kuttl-cli"
 # tap "kudobuilder/tap"
 
+brew "upbound/tap/up"
+brew "crossplane"
 brew "stefanprodan/tap/timoni"
 brew "oven-sh/bun/bun"
 brew "buf"
