--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -7,6 +7,7 @@ brew "KusionStack/tap/kusion"
 
 brew "upbound/tap/up"
 brew "crossplane"
+brew "nerdctl"
 brew "stefanprodan/tap/timoni"
 brew "oven-sh/bun/bun"
 brew "buf"
@@ -14,9 +15,12 @@ brew "just"
 brew "testkube"
 brew "popeye"
 brew "kubent"
-brew "crossplane"
 brew "kuttl-cli"
 brew "argo"
+tap "minio/stable"
+brew "minio/stable/minio"
+brew "minio/stable/mc"
+
 brew "flux"
 # brew "argo-cd"
 brew "vals"
