--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -5,10 +5,16 @@ tap "KusionStack/tap"
 brew "KusionStack/tap/kusion"
 # tap "kudobuilder/tap"
 
+tap "dapr/tap"
+brew "dapr/tap/dapr-cli"
+brew "doctl"
+brew "ollama"
 brew "upbound/tap/up"
+brew "protobuf"
+brew "istioctl"
 brew "crossplane"
-brew "nerdctl"
 brew "stefanprodan/tap/timoni"
+brew "deno"
 brew "oven-sh/bun/bun"
 brew "buf"
 brew "just"
@@ -20,9 +26,8 @@ brew "argo"
 tap "minio/stable"
 brew "minio/stable/minio"
 brew "minio/stable/mc"
-
+brew "uv"
 brew "flux"
-# brew "argo-cd"
 brew "vals"
 brew "linkerd"
 brew "kubescape"
@@ -47,6 +52,7 @@ brew "node"
 brew "pnpm"
 brew "awscli"
 brew "helm"
+brew "kompose"
 brew "helmfile"
 brew "minikube"
 brew "kubectx"
@@ -65,4 +71,10 @@ cask "google-cloud-sdk"
 cask "mongodb-compass"
 cask "microsoft-teams"
 cask "zoom"
+cask "obsidian"
+cask "pgadmin4"
+cask "medis"
+cask "redis-insight"
+cask "multipass"
+# cask "docker"
 # cask "jetbrains-toolbox"
