--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,12 +3,12 @@ tap "kcl-lang/tap"
 brew "kcl-lang/tap/kcl"
 tap "KusionStack/tap"
 brew "KusionStack/tap/kusion"
-# tap "kudobuilder/tap"
 
 tap "dapr/tap"
 brew "dapr/tap/dapr-cli"
 brew "doctl"
 brew "ollama"
+brew "htop"
 brew "upbound/tap/up"
 brew "protobuf"
 brew "istioctl"
@@ -53,14 +53,13 @@ brew "pnpm"
 brew "awscli"
 brew "helm"
 brew "kompose"
-brew "helmfile"
 brew "minikube"
 brew "kubectx"
 brew "pulumi"
 brew "tilt"
 brew "zoxide"
 brew "eza"
-cask "arc"
+brew "langgraph-cli"
 cask "raycast"
 cask "visual-studio-code"
 cask "warp"
@@ -75,6 +74,6 @@ cask "obsidian"
 cask "pgadmin4"
 cask "medis"
 cask "redis-insight"
-cask "multipass"
-# cask "docker"
-# cask "jetbrains-toolbox"
+cask "lm-studio"
+cask "docker"
+cask "jetbrains-toolbox"
