--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -75,5 +75,5 @@ cask "pgadmin4"
 cask "medis"
 cask "redis-insight"
 cask "lm-studio"
-cask "docker"
-cask "jetbrains-toolbox"
+# cask "docker"
+# cask "jetbrains-toolbox"
