--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,11 +3,19 @@ tap "kcl-lang/tap"
 brew "kcl-lang/tap/kcl"
 tap "KusionStack/tap"
 brew "KusionStack/tap/kusion"
+# brew tap "fluxcd/tap/flux"
+# brew "flux" # influxDB
 
 tap "dapr/tap"
 brew "dapr/tap/dapr-cli"
+brew "hey"
+brew "yq"
 brew "doctl"
 brew "ollama"
+# brew "devbox"
+brew "rbenv"
+brew "teller"
+brew "httpie"
 brew "htop"
 brew "upbound/tap/up"
 brew "protobuf"
@@ -21,13 +29,11 @@ brew "just"
 brew "testkube"
 brew "popeye"
 brew "kubent"
-brew "kuttl-cli"
 brew "argo"
 tap "minio/stable"
 brew "minio/stable/minio"
 brew "minio/stable/mc"
 brew "uv"
-brew "flux"
 brew "vals"
 brew "linkerd"
 brew "kubescape"
@@ -58,15 +64,16 @@ brew "kubectx"
 brew "pulumi"
 brew "tilt"
 brew "zoxide"
+brew "trivy"
+brew "tlrc"
+brew "duf"
 brew "eza"
 brew "langgraph-cli"
 cask "raycast"
 cask "visual-studio-code"
 cask "warp"
-cask "gitkraken"
 cask "ghostty"
 cask "discord"
-cask "google-cloud-sdk"
 cask "mongodb-compass"
 cask "microsoft-teams"
 cask "zoom"
@@ -75,5 +82,17 @@ cask "pgadmin4"
 cask "medis"
 cask "redis-insight"
 cask "lm-studio"
+cask "zed"
+cask "google-chrome"
+cask "zen"
+cask "slack"
+cask "chatgpt"
+cask "claude"
+cask "tg-pro"
+cask "cursor"
+cask "1password"
+cask "lens"
+cask "httpie-desktop"
+# cask "gcloud-cli"
 # cask "docker"
 # cask "jetbrains-toolbox"
