--- a/starship/.config/starship/starship.toml
+++ b/starship/.config/starship/starship.toml
@@ -11,6 +11,7 @@ $aws\
 $azure\
 $nix_shell\
 $bun\
+$zig\
 $python\
 $rust\
 $lua\
@@ -35,7 +36,7 @@ error_symbol = '[✗](bold red)'
 show_notifications = true
 
 [directory]
-truncation_length = 3
+truncation_length = 5
 truncation_symbol = '…/'
 truncate_to_repo = false
 
